src/app.scss
/* app css stylesheet */

@import './vendor/_variables';
@import '../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap';
@import './vendor/_bootswatch';
@import './vendor/_typeaheadjs';
@import './vendor/_hexagon';
@import '../node_modules/jointjs/joint';

[ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
  display: none !important;
}

$selectionListWidth: 275px;
$footer-height: 50px;

.btn-group.right .dropdown-menu {
  right: 0;
  left: auto;
}

.panel-footer {
  position: fixed;
  bottom: 0;
  height: $footer-height;
  width: 100%;
  font-size: small;
  border: none;
  padding: 15px;
}

.btn-default {
  color: #555555;
  background-color: #e9e9e9;
  border: none;
}


.multi-input {
  border: 1px solid #ccc;
  height: auto !important;
  min-height: 39px;
  padding: 0;
  display: inline-block;
  margin-bottom: -5px;

  .added-item {
    padding: 5px 4px;
    margin: 6px 0 0 6px;
    line-height: 12px;
    font-size: 12px;
    background-color: #f5f5f5;
    display: inline-block;
    float: left;
    border-radius: 2px;
    border: 1px solid #ddd;

    .delete-item {
      display: inline-block;
      cursor: pointer;
      padding: 0 2px;
      background-color: $btn-default-border;
      margin-left: 5px;
    }

    .delete-item:hover {
      background-color: $btn-default-color;
    }
  }

  input {
    display: inline-block;
    float: left;
    height: 37px;
    padding: 0 12px 0 12px;
    border: 0;
  }

  input:focus {
    outline: 0;
    box-shadow: 0;
  }
}

ul.errors {
  border-left: 5px solid $state-danger-text;
  padding-left: 15px;

  li {
    list-style-type: none;
  }

  li:before {
    content: '\b7\a0';
  }
}

.link {
  color: $link-color;
}

.link:hover {
  cursor: pointer;
  text-decoration: underline;
}

.panel-group .glyphicon {
  position: inherit;
}

.model-panel--left-placeholder {
  float: left;
}

.model-panel--left {
  width: $selectionListWidth;
  float: left;
  border-right: solid 1px #ddd;
  background-color: #fff;

  .tab-pane {
    border-bottom: solid 1px #ddd;
  }

  .nav-tabs {

    border-bottom: none;

    li {

      width: 33%;

      > a {
        padding: 10px 0 0 0;
      }
    }
  }

  ul.nav {
    margin-right: 0;
    padding: 9px 0;
  }

  .add-new-button {
    margin: 3px 9px 9px 9px;
    width: calc(100% - 23px);
  }

  uib-tab-heading {
    i {
      width: 100%;
      padding-right: 2px;
      text-align: center;
      font-size: x-large;
    }
    p {
      width: 100%;
      text-align: center;
      font-size: x-small;
    }
  }

  .panel__list {
    height: calc(100vh - 95px);
    overflow-y: auto;

    &.has-button {
      height: calc(100vh - 146px);
    }

    li {
      cursor: pointer;
      padding: 5px 0 5px 10px;
      font-size: medium;

    }

    li:hover {
      color: $brand-primary;
      background-color: $list-group-hover-bg;
    }
  }
}

.model-panel--right {
  float: right;
  width: calc(100% - #{$selectionListWidth});
  min-height: 100vh;
  padding: 10px 0;

  .col-md-1, .col-md-5, .col-md-7, .col-md-11, .col-md-12 {
    padding: 0 0 0 10px;
  }
}

.model-panel__selection {
  background-color: $list-group-hover-bg;
}

uib-accordion .panel-group {
  margin: 15px auto;

  .panel-title {
    a:hover {
      text-decoration: none;
    }
    a {
      text-decoration: none;
    }
  }
}

form {
  label {
    font-weight: bold;
    font-size: 15px;
    margin: 15px 0 0 0;
    padding: 0;
    display: block;
  }

  input, select, textarea {
    width: 100%;
  }
}

selection-view, .main-editable-content {
  .form-control {
    max-width: 500px;
  }

  .collapsable {
    font-size: large;
  }

  .collapsable:hover {
    color: $brand-primary;
    cursor: pointer;
  }
}

.editable-wrap {

  word-break: break-all;

  a {
    cursor: pointer;
  }

  button {
    margin-top: 10px;
  }

  textarea {
    height: 100px;
  }
}

.model-view__sub {
  margin-left: 20px;
}

.panel-title span {
  vertical-align: middle;
}

.breadcrumb {
  margin-bottom: 0;
  border: none;
  font-weight: 400;
  background-color: white;
}

.component {
  border: solid 1px #ddd;

  .selection-form {
    min-height: calc(100vh - 134px);
    padding-right: 40px;

    .editable-wrap {
      padding-right: 170px;
    }

    .property-ordering {
      position: absolute;
      left: 50%;

      span {
        font-size: xx-small;
      }
      span:hover {
        color: $brand-primary;
      }

      .glyphicon-chevron-up {
        position: absolute;
        top: -25px;
        color: #bbb;
      }

      .glyphicon-chevron-down {
        position: absolute;
        top: -5px;
        color: #bbb;
      }
    }
  }
}

.visualization-container {
  width: 100%;
  height: calc(100vh - 85px);
  overflow: hidden;

  .zoom {
    position: absolute;
    width: 30px;
    height: 30px;
    margin: 0;
    padding: 10px;
    top: 75px;
    background-color: rgba(231,231,231,0.9);
    border: none;
    line-height: 0.6;
  }

  .zoom:hover {
    background-color: #ddd;
    cursor: pointer;
  }

  .zoom-in { left: 20px; }
  .zoom-out { left: 60px; }

  .link-tools .tool-remove { display: none }
  .link-tools .tool-options { display: none }
  .link .mark-errors { display: none; }
  .marker-arrowheads { display: none; }
  .uml-class-methods-rect { display: none }

  text {
    font-family: $font-family-base;
    font-weight: normal;
  }

  .uml-class-name-text {
    fill: #fff;
  }

  .uml-class-name-rect {
    fill: $brand-primary;
    stroke: none;
  }

  .uml-class-attrs-rect {
    fill: #f5f5f5;
    stroke: #ddd;
    stroke-width: 1px;
  }

  .marker-target {
    fill: #4b4a67;
    stroke: #4b4a67;
  }

  .loading-indicator {
    position: absolute;
    width: calc(100% - 10px);
    height: calc(100% - 64px);
    z-index: 1000;
    background-color: #ffffff;

    .uil-default-css {
      position: absolute;
      top: 100px;
      left: calc(50% - 100px);
      margin: 0 auto;
    }
  }
}

.selection-form {
  padding: 15px;
}

.component-header {
  background-color: #f5f5f5;
  padding: 15px;
  border-bottom: solid 1px #ddd;
  font-size: 26px;
  h3 {
    margin: 0;
    span {
      vertical-align: middle;
    }
  }
}

.main-header {
  background-color: #f7f7f7;
  padding: 5px 0 5px 5px;

  h2 {
    padding-left: 10px;
    margin-top: 10px;
    .glyphicon {
      font-size: large;
      margin-left: 10px;
    }
  }
}

.model-header {
  @extend .main-header;
  cursor: pointer;

  h2:hover {
    color: $brand-primary;
  }
}

.main-editable-content {
  @include clearfix;
  padding-bottom: 10px;
}

.modal-dialog {
  &.modal-large {
    width: 90%;
  }
  &.modal-medium {
    width: 60%;
  }
  &.modal-small {
    width: 30%;
  }
  &.modal-adapting {
    width: auto;
    min-width: 30%;
    display: table;
  }
}

.modal-header i {
  color: $gray-base;
  cursor: pointer;
}

.modal-header {
  border-bottom: none;
}

.modal-footer {
  border-top: none;
}

.bottom {
  border-top: solid 1px #ddd;
}

.nav {
  a:hover {
    cursor: pointer;
  }
}

.navbar {
  min-height: 60px;
}

.navbar-brand {
  line-height: 40px;
}

.navbar-right {
  margin: 10px;

  .navbar-btn {
    margin: 0;
    padding: 0;
    background: transparent;

    button.btn {
      color: $navbar-default-brand-color;
      background: transparent;
      border: 0;
      font-weight: inherit;
      font-size: inherit;
      padding: 12px;
      line-height: 21px;
    }

    button.btn:hover {
      background-color: black;
      color: #ffffff;
      border: 0;
    }
  }
}

.navbar-default .navbar-nav > li > a:hover {
  background-color: #303F9F;
  text-decoration: none;
}

.navbar-right .navbar-btn button.btn:hover, .navbar-right .navbar-btn button.btn:focus {
  background-color: #303F9F;
  text-decoration: none;
  color: white;
}

.h2 {
  background-color: #f5f5f5;
}

.top-actions {
  @include clearfix;

  z-index: 1000;
  padding: 10px 10px 10px 10px;

  p.button-label {
    padding-top: 8px;
  }

  .left {
    float: left;
    margin-right: 5px;
  }

  .right {
    float: right;
    margin-left: 5px;
  }

  .alert {
    clear: both;
  }
}

modal-body {

  .empty-message {
    padding: 3px 20px;
    a {
      cursor: pointer;
    }
  }

  .tt-menu {
    max-height: 400px;
    overflow-y: auto;
  }

  .details {
    font-size: x-small;
  }

  > p {
    max-width: 600px;
  }

  .input-group {
    width: 100%;
    padding-bottom: 20px;
  }

  textarea {
    height: 100px;
  }

  .twitter-typeahead {
    width: 100%;

    h5 {
      padding-left: 10px;
      padding-right: 10px;
    }
  }

  .search-selection {
    height: calc(100vh - 300px);
    overflow-y: auto;
  }

  .search-results {

    height: calc(100vh - 260px);

    &.with-button {
      height: calc(100vh - 315px);
    }

    overflow-y: auto;

    .search-result {
      font-size: small;
      cursor: pointer;
      background-color: #f5f5f5;
      border: 1px solid #ddd;
      margin-bottom: 10px;
      padding-left: 10px;

      &.selected, &.selection {
        background-color: #ffffff;
      }

      &.disabled {
        background-color: #bbb;
        cursor: not-allowed;
      }

      i {
        float: right;
        padding: 5px;
      }
    }
  }
}

a.accordion-toggle {
  outline: 0;
}

.main {
  @include clearfix;
  padding: 10px;

  &.with-footer {
    margin-bottom: $footer-height;
  }
}

.iow-panel {
  @extend .panel;
  @extend .panel-default;
  overflow: hidden;
}

.frontpage-panel {
  @extend .iow-panel;
  margin-top: 21px;
}

.group-panel {
  @extend .iow-panel;
  margin-top: 30px;
}

.iow-panel-heading {
  @extend .panel-heading;
  h2 {
    margin: 5px;
  }
}

.point {
  @include clearfix;
  margin-top: 40px;

  $bullet-width: 100px;

  .content {
    padding-left: 20px;
    width: calc(100% - #{$bullet-width});
    float: left;
  }

  .bullet-container {
    float: left;
    width: $bullet-width;
    padding-top: 10px;
    padding-left: 10px;

    .bullet {
      text-align: center;
      vertical-align: text-bottom;
      border: 1px solid #ddd;;
      border-radius: 60px;
      padding: 0;
      background-color: #f5f5f5;

      span {
        display: inline-block;
        padding: 35px 40px;
        text-align: center;
        margin: 0;
      }
    }
  }
}

.frontpage-panel__body {
  @extend .panel-body;

  .input-group {
    width: 100%;
    padding-bottom: 30px;

    .glyphicon {
      font-size: x-large;
    }
  }

  .advanced-search {
    top: -20px;
    position: relative;
  }
}

.panel__list {
  list-style: none;
  padding: 0;
  margin: 0;
  p {
    font-size: small;
    padding-left: 20px;
    margin-bottom: 0;
  }
}

.selectable-panel__list {
  @extend .panel__list;
  max-height: 400px;
  overflow-y: auto;
  margin: -15px;
  li {
    cursor: pointer;
    padding: 10px 20px;
  }
  li:hover {
    text-decoration: none;
    background-color: $list-group-hover-bg;
  }
  li.selection {
    background-color: $list-group-hover-bg;
  }
  .link {
    text-decoration: none;
  }
}

a.accordion-toggle {
  display: block;
}

// fix weird ui-bootstrap bug
.panel-collapse.in {
  height: auto !important;
}

